<resources>
    <string name="app_name">Walkly</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="loading">Loading…</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>

    <string name="signing_in">Sign in</string>
    <string name="welcome_String">Hi, Logged in</string>

    <string name="view_leaderboard">View Leaderboard</string>
    <string name="title_leaderboard">Leaderboard</string>

    <string name="login">Sign In</string>
    <string name="noAcc">Don\'t have an account?</string>

    <string name="signing_up">Sign up</string>
    <string name="access_token">pk.eyJ1Ijoic3dlNDE3IiwiYSI6ImNrMjh5M2tscjA4MXgzbXBlcnN2anE5azEifQ.p1tQcm24uNjRDNHN0n1gtA</string>

    <string name="level">Level:  </string>
    <string name="global">Global</string>
    <string name="friends">Friends</string>

    <string-array name="battles">
        <item name="battle">Battle 1</item>
        <item name="battle">Battle 2</item>
        <item name="battle">Battle 3</item>
        <item name="battle">Battle 4</item>
        <item name="battle">Battle 5</item>
    </string-array>

    <string-array name="quests">
        <item name="quest">Quest 1</item>
        <item name="quest">Quest 2</item>
        <item name="quest">Quest 3</item>
    </string-array>

    <string name="versus">VS</string>
    <string name="enemy_health">Enemy HP</string>
    <string name="player_health">Your HP</string>
    <string name="leave_battle">Leave Battle</string>
    <string name="use_items">Use Items</string>
    <string name="no_items_error_message">You don\'t have any items</string>
    <string name="no_user_found">Sorry, no user with that user name exists</string>
    <string name="no_online_battle_found">Sorry, no online battles are being \n played right now</string>
    <string name="no_friends">You don\'t have any friends</string>
    <string name="no_achievemnt">You don\'t have any achievements</string>
    <string name="host_battle">Host</string>
    <string name="join_battle">Join</string>
    <string name="settings">Settings</string>
    <string name="pvp_invites">PvP Invites</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="policy">Privacy Policy</string>
    <string name="feedback_title">Tell us your thoughts</string>
    <string name="send">Send</string>
    <string name="feedback_hint">Your Feedback</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="actions">Actions</string>
    <string name="pvp_text">Player vs Player</string>
    <string name="online_battles">Online Battles</string>
    <string name="invites">Invites</string>
    <string name="pvp">Player vs Player</string>
    <string name="start">Start</string>
    <string name="creating_battle">Creating battle…</string>
    <string name="waiting">Waiting…</string>
    <string name="change_to_public">Public</string>
    <string name="waiting_for_host_lobby">Waiting for host to start the battle…</string>
    <string name="creating_online_battle">Creating online battle…</string>
    <string name="joining_battle">Joining battle…</string>
    <string name="change">Change</string>
    <string name="invite_friends">Invite friends</string>
    <string name="vs">VS</string>
    <string name="enemy_hp">Enemy HP</string>
    <string name="players_hp">Players HP</string>
    <string name="number_of_steps">Number of Steps</string>
    <string name="use_item">Use Item</string>
    <string name="creating_pvp_loading">Creating PVP battle...</string>
    <string name="pvp_waiting">Waiting for the opponent to join...</string>
    <string name="error_no_invites">You don\'t have any invites currently</string>


</resources>
