<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings_black_24dp"/>
        <item android:id="@+id/nav_pvp_invites"
            android:title="@string/pvp_invites"
            android:icon="@drawable/ic_pvp_black_24dp"/>
        <item android:id="@+id/nav_privacy_policy"
            android:title="@string/policy"
            android:icon="@drawable/ic_privacy_black_24dp"/>
    </group>

    <item android:title="@string/actions">
        <menu>
            <item android:id="@+id/nav_send_feedback"
                android:title="@string/send_feedback"
                android:icon="@drawable/ic_feedback_black_24dp"/>
            <item android:id="@+id/nav_logout"
                android:title="@string/sign_out"
                android:icon="@drawable/ic_logout_black_24dp"/>
        </menu>
    </item>
</menu>